# eacces-modifier

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  namei.ll
.devcontainer/: Dockerfile  devcontainer.json
Macker/: CMakeLists.txt  CMakePresets.json  README.md
Macker/include/: LogManager.h  MyASTVisitor.h  MyPPCallbacks.h  Utilities.h
Macker/macker/: CMakeLists.txt  LogManager.cpp  LogParser.cpp  Macker.cpp  MyASTVisitor.cpp  MyPPCallbacks.cpp  Utilities.cpp  main.cpp
Macker/macker/include/: LogManager.h  MyASTVisitor.h  MyPPCallbacks.h
Macker/test/: stderr.txt  test.c
Permod/: CMakeLists.txt  CMakePresets.json  README.md
Permod/kernel-src/: namei.c
Permod/patch/: sel_to_br.patch
Permod/permod/: CMakeLists.txt  Condition.cpp  ConditionAnalysis.cpp  Instrumentation.cpp  LogManager.cpp  LogParser.cpp  Permod.cpp  main.cpp
Permod/permod/include/: Instrumentation.hpp  LogManager.h  Utils.hpp  debug.h  macro.h
Permod/rtlib/: CMakeLists.txt  fs-Makefile.patch  rtlib.c
Permod/scripts/bash/: rtlib_example.sh  trace.sh  update_kernel.sh  update_partial.sh
Permod/scripts/filter/: filter.py
Permod/scripts/old/: apply_to_linux.py  link_then_run.py
Permod/scripts/python/: .gitignore
Permod/scripts/python/Permod/: constants.py  utils.py
Permod/test/example/: bin-example.c  cmp-example.c  example.c  fs-example.c  inline-example.c  joern.sc  log-or.txt  one-example.c  select-example.c  stderr.txt  struct-example.c  switch-example.c  while-example.c
Permod/test/kernel/fs/may_follow_link/: init.sh
include/macker/: LogManager.h  LogParser.h  MyASTVisitor.h  MyPPCallbacks.h
include/permod/: Condition.hpp  ConditionAnalysis.hpp  Instrumentation.hpp  LogManager.h  LogParser.h  OriginFinder.hpp  debug.h
include/utils/: debug.h  macro.h
joern/: .gitignore  collect_assignments.sc  net.py  slices.json  test.sc
kernel/: .config  .gitignore  apply.sh  fs-namei.ll  namei.c  namei.ll  onlynamei.sh  rtlib.c
kernel-src/: namei-c.ll
kernel/scripts-for-kernel/: README.md  update_kernel.sh  update_namei.sh
kernel/test/: exe.sh  my-cat.c
kernel/test/src/: errorcooker.c
notes/: log-PTR-exec.txt  log-PTR-namei.txt
permod/: CMakeLists.txt  Condition.cpp  Condition.h  ConditionAnalysis.cpp  ConditionAnalysis.h  ErrBBFinder.cpp  ErrBBFinder.h  ErrBBfinder.cpp  ErrBBfinder.h  Instrumentation.cpp  OriginFinder.h  Permod.cpp  Utils.cpp  debug.h  macro.h  permod.h
permod/include/: Condition.hpp  ConditionAnalysis.hpp  ErrBBFinder.hpp  Instrumentation.hpp  OriginFinder.hpp  Utils.hpp  debug.h  macro.h
rtlib/: Kbuild.patch  Makefile  fs-Makefile  rtlib.c  rtlibk.c
scripts/: apply_to_linux.py  clean.sh  compile.py  emit_ll_example.sh  emit_namei_ll.sh  init_kernel.sh  kernel.sh  kernlog.sh  link_then_run.py  monitor.py  on_example.sh  rtlib_example.sh  trace.sh  update_example.sh  update_kernel.sh  update_kernel_vanilla.sh  update_namei.sh  update_partial.sh  user.sh
scripts/bash/: install_image.sh
scripts/coccinelle/: sel_to_br.cocci
scripts/filter/: filter.py
scripts/python/: .gitignore  analyze.py
scripts/python/PerMod/: constants.py  utils.py
test/: cmp-example.c  cmp-example.ll  example.c  example.ll  example2.c  example2.ll  example_withname.ll  or-example.c  or-example.ll
test/example/: caller-example.c  func-example.c  log-or.txt  or-example.c  post-example.c  select-example.c  simple-or-example.c  while-example.c
test/kernel/: auto-errcooker.c
test/kernel/_tmp/: README.md
test/kernel/acl_permission_check/: README.md  main.c
test/kernel/fs/acl_permission_check/: main.sh
test/kernel/fs/may_follow_link/: README.md  open_create.c
test/kernel/lookup_one_common/: README.md
test/kernel/may_create_in_sticky/: Makefile  README.md  init.sh  log.txt  main.c  main.sh  other.c
test/kernel/may_follow_link/: Makefile  README.md  main.sh
test/kernel/may_open/: README.md
test/kernel/profile_transition/: README.md
(+11 files in other folders)
